# legacy-polytrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  jsoncreate.cmake  shared.cmake  static.cmake
resources/: plugin.json
src/: AccountStorage.h  MatrixAccountSession.cpp  MatrixAccountSession.h  PolyChatHTTPClient.cpp  PolyChatHTTPClient.h  PolyTrix.cpp  PolyTrix.h
