project(PolyTrix)

cmake_minimum_required(VERSION 3.0)

set(OUTPUT_DIR ${CMAKE_HOME_DIRECTORY}/target/)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR})

if(NOT WIN32)
	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -std=c++17 -D_GLIBCXX_USE_CXX11_ABI=0")
endif()

set(src src/PolyTrix.cpp src/MatrixAccountSession.cpp)
include_directories(src)

# JSON needed for sub-project
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(MatrixClient CONFIG REQUIRED)
 find_package(coeurl CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(Olm 3)



 message("MatrixClient DIR: ${MatrixClient_DIR}")

include_directories(${MTXCLIENT_INCLUDE_DIR})
include_directories(${COEURL_INCLUDE_DIR})

# define the project
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include("${CMAKE_CURRENT_SOURCE_DIR}/static.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/shared.cmake")
